<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@color/royal_blue"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    >
    <androidx.cardview.widget.CardView
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_width="950dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:src="@drawable/logo1"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="250dp"
            android:text="@string/gamename"
            android:textColor="@color/blue"
            android:textSize="50dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="255dp"
            android:layout_height="100dp"
            android:layout_marginLeft="350dp"
            android:layout_marginBottom="150dp"
            android:layout_marginTop="350dp"
            android:text="開始"
            android:textSize="40dp"
            style="@style/login_button"
            />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="15dp"
            >
            <TextView
                android:id="@+id/researcherLabel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/researcher"
                android:textColor="@color/black"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/reseacherDepartment"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="100dp"
                android:text="@string/researcherDepartment"
                android:textColor="@color/black"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/reseacherName"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="320dp"
                android:text="@string/researcherName"
                android:textColor="@color/black"
                android:textSize="20dp"
                />


            <TextView
                android:id="@+id/deanofTheCollegeLabel"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:text="@string/deanOfColleage"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/deanofTheCollegeName"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="30dp"
                android:text="@string/fjuhospitaldean"
                android:textColor="@color/black"
                android:textSize="20dp"

                />

            <TextView
                android:id="@+id/revison"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="60dp"
                android:text="@string/revision"
                android:textColor="@color/black"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:text="@string/revisionDepartment"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="60dp"
                android:text="@string/revisionName"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/developer"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="90dp"
                android:text="@string/develop"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="90dp"
                android:text="@string/developDepartment"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="90dp"
                android:text="@string/developName"
                android:textColor="@color/black"
                android:textSize="20dp" />
        </RelativeLayout>




        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/multiple_actions_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/multiple_actions_down"
            android:layout_toStartOf="@+id/multiple_actions_down"
            fab:fab_addButtonColorNormal="@color/white"
            fab:fab_addButtonColorPressed="@color/white"
            fab:fab_addButtonSize="mini"
            fab:fab_addButtonPlusIconColor="@color/black"
            fab:fab_addButtonStrokeVisible="false"
            fab:fab_expandDirection="up"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="850dp"
            android:layout_marginTop="400dp"
            >
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/user_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_smoke"
                fab:fab_title="Click to remove"
                fab:fab_addButtonPlusIconColor="@color/black"
                fab:fab_icon="@drawable/user_data"
                fab:fab_size="mini"
                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/session_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_colorNormal="@color/white"
                fab:fab_colorPressed="@color/white_smoke"
                fab:fab_addButtonPlusIconColor="@color/black"
                fab:fab_icon="@drawable/time"
                fab:fab_size="mini"
                fab:fab_title="Another one on the right"
                />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>