<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AuthenticationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/user_recycleview"
        app:layout_constraintTop_toTopOf="parent"
        >
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:id="@+id/headerScroll"
            android:layout_height="@dimen/header_height"
            >

            <LinearLayout android:orientation="horizontal"
                android:background="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtName"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/name"
                android:textAllCaps="true"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtLogo"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:gravity="center|start"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtLocation"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtStadiumName"
                android:gravity="center|start"
                android:layout_marginStart="@dimen/margin"
                android:textStyle="bold"
                android:text="@string/educationyear"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtLeagueName"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin"
                android:gravity="center|start"
                android:text="@string/workingstatus"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="@dimen/cell_width"
                android:id="@+id/txtCoachName"
                android:gravity="center|start"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/lastimelogin"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"/>

            </LinearLayout>
        </HorizontalScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/authentication_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="500dp"

            />
        <include
            layout="@layout/action_button_group_4"
            android:id="@+id/imageCard"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>